--- a/docs/职业发展/副业项目.md
+++ b/docs/职业发展/副业项目.md
@@ -1,1 +1,14 @@
-副业项目.md
+# 副业
+
+留学咨询
+
+# 项目
+
+### Docker和NodeJS搭建音乐网站
+
+- [https://binaryify.github.io/NeteaseCloudMusicApi/#/?id=neteasecloudmusicapi](https://binaryify.github.io/NeteaseCloudMusicApi/#/?id=neteasecloudmusicapi)
+- [https://neteasecloudmusicapi.js.org/#/?id=neteasecloudmusicapi](https://neteasecloudmusicapi.js.org/#/?id=neteasecloudmusicapi)
+- [http://iwenwiki.com/NeteaseCloudMusicApi/guide/](http://iwenwiki.com/NeteaseCloudMusicApi/guide/)
+- [https://segmentfault.com/a/1190000042073697](https://segmentfault.com/a/1190000042073697)
+- https://github.com/ChenLiaoyuan/H5MusicPlayer
+- [https://blog.csdn.net/qq_40197828/article/details/129772177](https://blog.csdn.net/qq_40197828/article/details/129772177)
