--- a/docs/信息获取/博客论坛.md
+++ b/docs/信息获取/博客论坛.md
@@ -9,3 +9,13 @@
 
 - [新未来](https://www.xwlym.com/)
 
+### 论坛
+
+- https://dev.to/
+
+### 优质博客
+
+- 怎样花两年时间去面试一个人 https://mindhacks.cn/2011/11/04/how-to-interview-a-person-for-two-years/
+- https://soulteary.com/
+- https://thiscute.world/statistics/
+
