--- a/docs/职业发展/编程学习.md
+++ b/docs/职业发展/编程学习.md
@@ -2,6 +2,11 @@
 
 ## 工具类
 
+### 团队协作
+
+- [在线办公室](https://app.gather.town/invite?token=YiFlG7nMRtShur_PGtIq)
+- 免费在线流程图思维导图 [https://processon.com/](https://processon.com/)
+
 ### 资源下载
 
 - MAC软件：https://www.imacxq.com/
