--- a/docs/信息获取/博客论坛.md
+++ b/docs/信息获取/博客论坛.md
@@ -15,6 +15,7 @@
 
 ### 优质博客
 
+- The Lesson to Unlearn: http://paulgraham.com/lesson.html
 - 怎样花两年时间去面试一个人 https://mindhacks.cn/2011/11/04/how-to-interview-a-person-for-two-years/
 - https://soulteary.com/
 - https://thiscute.world/statistics/
