--- a/docs/生活技能/租房攻略.md
+++ b/docs/生活技能/租房攻略.md
@@ -1,1 +1,3 @@
-租房攻略.md
+### 租房攻略
+
+- Guelph Apartments: https://docs.google.com/spreadsheets/d/16GmdaDWmjIIjL9eV3mNX6n2x3aSwXZWCknhPqwbx5lo/edit?usp=sharing
