--- a/docs/职业发展/编程学习.md
+++ b/docs/职业发展/编程学习.md
@@ -6,6 +6,13 @@
 
 - https://blog.gamedev.tv/
 
+## 设备折腾
+
+### 家用服务器
+
+- 变废为宝 ｜ 旧电脑变云数据中心 ｜ Esxi 配置 https://www.frytea.com/archives/448/
+- AMD 5800u 笔记本折腾 Proxmox VE 7.0 虚拟化 https://soulteary.com/2021/10/23/amd-5800u-notebook-toss-proxmox-ve-7-0-virtualization.html
+
 ## 证书类
 
 ### AWS证书
