--- a/docs/职业发展/编程学习.md
+++ b/docs/职业发展/编程学习.md
@@ -12,6 +12,8 @@
 
 - 变废为宝 ｜ 旧电脑变云数据中心 ｜ Esxi 配置 https://www.frytea.com/archives/448/
 - AMD 5800u 笔记本折腾 Proxmox VE 7.0 虚拟化 https://soulteary.com/2021/10/23/amd-5800u-notebook-toss-proxmox-ve-7-0-virtualization.html
+- 旧笔记本改造记 https://yushum.com/archives/328
+- 旧笔记本通过自定义整合网卡驱动安装 ESXi 6.7.0 u1 https://www.jianshu.com/p/b0124a2c5e33
 
 ## 证书类
 
