--- a/docs/信息获取/博客论坛.md
+++ b/docs/信息获取/博客论坛.md
@@ -20,4 +20,5 @@
 - 怎样花两年时间去面试一个人 https://mindhacks.cn/2011/11/04/how-to-interview-a-person-for-two-years/
 - https://soulteary.com/
 - https://thiscute.world/statistics/
+- 计算机网络知识 https://www.yuque.com/coding-fan/network
 
